src/test/ui/rfc1598-generic-associated-types/generic_associated_type_undeclared_lifetimes.stderr
error[E0261]: use of undeclared lifetime name `'b`
  --> $DIR/generic_associated_type_undeclared_lifetimes.rs:22:37
   |
22 |         + Deref<Target = Self::Item<'b>>;
   |                                     ^^ undeclared lifetime

error[E0261]: use of undeclared lifetime name `'undeclared`
  --> $DIR/generic_associated_type_undeclared_lifetimes.rs:26:41
   |
26 |     fn iter<'a>(&'a self) -> Self::Iter<'undeclared>;
   |                                         ^^^^^^^^^^^ undeclared lifetime

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/generic_associated_type_undeclared_lifetimes.rs:20:47
   |
20 |     type Iter<'a>: Iterator<Item = Self::Item<'a>>
   |                                               ^^ lifetime parameter not allowed on this type

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/generic_associated_type_undeclared_lifetimes.rs:22:37
   |
22 |         + Deref<Target = Self::Item<'b>>;
   |                                     ^^ lifetime parameter not allowed on this type

error[E0110]: lifetime parameters are not allowed on this type
  --> $DIR/generic_associated_type_undeclared_lifetimes.rs:26:41
   |
26 |     fn iter<'a>(&'a self) -> Self::Iter<'undeclared>;
   |                                         ^^^^^^^^^^^ lifetime parameter not allowed on this type

error: aborting due to 5 previous errors

